fix the spacing of user guide and glossary on medium screens

--- a/src/scss/sections/help.scss
+++ b/src/scss/sections/help.scss
@@ -28,13 +28,18 @@
 
   &__guide {
     margin: 1rem 2rem 1rem 0;
+
+    @media only screen and (max-width: $bp-largest) {
+      margin: 1rem;
+    }
   }
 
   &__glossary {
     margin: 1rem 0 1rem 2rem;
-  }
 
-  &__guide {
+    @media only screen and (max-width: $bp-largest) {
+      margin: 1rem;
+    }
   }
 
   &__guide-heading,
